JEAP-5994: Backwards compatibility removal