@@ -3,7 +3,7 @@ package ch.admin.bit.jeap.reaction.observer.web.api;
 
 import ch.admin.bit.jeap.reaction.observer.domain.Action;
 import ch.admin.bit.jeap.reaction.observer.domain.ObservedReactionsAggregatedRepository;
-import ch.admin.bit.jeap.reaction.observer.domain.ObservedReactionsAggregatedStatisticsV2;
+import ch.admin.bit.jeap.reaction.observer.domain.ObservedReactionsAggregatedStatistics;
 import ch.admin.bit.jeap.reaction.observer.web.config.ReactionObserverProperties;
 import ch.admin.bit.jeap.reaction.observer.web.config.WebSecurityConfig;
 import org.junit.jupiter.api.Test;
@@ -39,77 +39,17 @@ class StatisticsControllerTest {
     private ObservedReactionsAggregatedRepository observedReactionsAggregatedRepository;
 
     @Test
-    void testGetStatisticsForComponentNoActions_backwards_compatibility() throws Exception {
-        // Arrange
-        String component = "testComponent";
-        List<ObservedReactionsAggregatedStatisticsV2> mockStatistics = Collections.singletonList(
-                new ObservedReactionsAggregatedStatisticsV2(component, "triggerType", "triggerFqn", new ArrayList<>(), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
-        );
-
-        when(observedReactionsAggregatedRepository.getStatistics(any(), any())).thenReturn(mockStatistics);
-
-        // Act & Assert
-        mockMvc.perform(get("/api/statistics/{component}", component)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .with(httpBasic("read", "secret"))
-                )
-                .andExpect(status().isOk())
-                .andExpect(content().json("[{\"component\":\"testComponent\",\"triggerType\":\"triggerType\",\"triggerFqn\":\"triggerFqn\",\"actionType\":null,\"actionFqn\":null,\"count\":5,\"median\":10.0,\"percentage\":15.0,\"triggerProperties\":{\"triggerProp\":\"triggerVal\"},\"actionProperties\":{}}]"));
-    }
-
-    @Test
-    void testGetStatisticsForComponentSingleAction_backwards_compatibility() throws Exception {
-        // Arrange
-        String component = "testComponent";
-        Action action = new Action("actionType", "actionFqn", Collections.singletonMap("actionProp", "actionVal"));
-        List<ObservedReactionsAggregatedStatisticsV2> mockStatistics = Collections.singletonList(
-                new ObservedReactionsAggregatedStatisticsV2(component, "triggerType", "triggerFqn", singletonList(action), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
-        );
-
-        when(observedReactionsAggregatedRepository.getStatistics(any(), any())).thenReturn(mockStatistics);
-
-        // Act & Assert
-        mockMvc.perform(get("/api/statistics/{component}", component)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .with(httpBasic("read", "secret"))
-                )
-                .andExpect(status().isOk())
-                .andExpect(content().json("[{\"component\":\"testComponent\",\"triggerType\":\"triggerType\",\"triggerFqn\":\"triggerFqn\",\"actionType\":\"actionType\",\"actionFqn\":\"actionFqn\",\"count\":5,\"median\":10.0,\"percentage\":15.0,\"triggerProperties\":{\"triggerProp\":\"triggerVal\"},\"actionProperties\":{\"actionProp\":\"actionVal\"}}]"));
-    }
-
-    @Test
-    void testGetStatisticsForComponentMultipleActions_onlyFirstIsUsed_backwards_compatibility() throws Exception {
-        // Arrange
-        String component = "testComponent";
-        Action action = new Action("actionType", "actionFqn", Collections.singletonMap("actionProp", "actionVal"));
-        Action action1 = new Action("actionType1", "actionFqn1", Collections.singletonMap("actionProp1", "actionVal1"));
-        List<ObservedReactionsAggregatedStatisticsV2> mockStatistics = Collections.singletonList(
-                new ObservedReactionsAggregatedStatisticsV2(component, "triggerType", "triggerFqn", List.of(action, action1), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
-        );
-
-        when(observedReactionsAggregatedRepository.getStatistics(any(), any())).thenReturn(mockStatistics);
-
-        // Act & Assert
-        mockMvc.perform(get("/api/statistics/{component}", component)
-                        .accept(MediaType.APPLICATION_JSON)
-                        .with(httpBasic("read", "secret"))
-                )
-                .andExpect(status().isOk())
-                .andExpect(content().json("[{\"component\":\"testComponent\",\"triggerType\":\"triggerType\",\"triggerFqn\":\"triggerFqn\",\"actionType\":\"actionType\",\"actionFqn\":\"actionFqn\",\"count\":5,\"median\":10.0,\"percentage\":15.0,\"triggerProperties\":{\"triggerProp\":\"triggerVal\"},\"actionProperties\":{\"actionProp\":\"actionVal\"}}]"));
-    }
-
-    @Test
     void testGetStatisticsForComponentNoActions() throws Exception {
         // Arrange
         String component = "testComponent";
-        List<ObservedReactionsAggregatedStatisticsV2> mockStatistics = Collections.singletonList(
-                new ObservedReactionsAggregatedStatisticsV2(component, "triggerType", "triggerFqn", new ArrayList<>(), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
+        List<ObservedReactionsAggregatedStatistics> mockStatistics = Collections.singletonList(
+                new ObservedReactionsAggregatedStatistics(component, "triggerType", "triggerFqn", new ArrayList<>(), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
         );
 
         when(observedReactionsAggregatedRepository.getStatistics(any(), any())).thenReturn(mockStatistics);
 
         // Act & Assert
-        mockMvc.perform(get("/api/statisticsV2/{component}", component)
+        mockMvc.perform(get("/api/statistics/{component}", component)
                         .accept(MediaType.APPLICATION_JSON)
                         .with(httpBasic("read", "secret"))
                 )
@@ -122,14 +62,14 @@ class StatisticsControllerTest {
         // Arrange
         String component = "testComponent";
         Action action = new Action("actionType", "actionFqn", Collections.singletonMap("actionProp", "actionVal"));
-        List<ObservedReactionsAggregatedStatisticsV2> mockStatistics = Collections.singletonList(
-                new ObservedReactionsAggregatedStatisticsV2(component, "triggerType", "triggerFqn", singletonList(action), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
+        List<ObservedReactionsAggregatedStatistics> mockStatistics = Collections.singletonList(
+                new ObservedReactionsAggregatedStatistics(component, "triggerType", "triggerFqn", singletonList(action), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
         );
 
         when(observedReactionsAggregatedRepository.getStatistics(any(), any())).thenReturn(mockStatistics);
 
         // Act & Assert
-        mockMvc.perform(get("/api/statisticsV2/{component}", component)
+        mockMvc.perform(get("/api/statistics/{component}", component)
                         .accept(MediaType.APPLICATION_JSON)
                         .with(httpBasic("read", "secret"))
                 )
@@ -143,14 +83,14 @@ class StatisticsControllerTest {
         String component = "testComponent";
         Action action = new Action("actionType", "actionFqn", Collections.singletonMap("actionProp", "actionVal"));
         Action action1 = new Action("actionType1", "actionFqn1", Collections.singletonMap("actionProp1", "actionVal1"));
-        List<ObservedReactionsAggregatedStatisticsV2> mockStatistics = Collections.singletonList(
-                new ObservedReactionsAggregatedStatisticsV2(component, "triggerType", "triggerFqn", List.of(action, action1), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
+        List<ObservedReactionsAggregatedStatistics> mockStatistics = Collections.singletonList(
+                new ObservedReactionsAggregatedStatistics(component, "triggerType", "triggerFqn", List.of(action, action1), 5, 10, 15d, Collections.singletonMap("triggerProp", "triggerVal"))
         );
 
         when(observedReactionsAggregatedRepository.getStatistics(any(), any())).thenReturn(mockStatistics);
 
         // Act & Assert
-        mockMvc.perform(get("/api/statisticsV2/{component}", component)
+        mockMvc.perform(get("/api/statistics/{component}", component)
                         .accept(MediaType.APPLICATION_JSON)
                         .with(httpBasic("read", "secret"))
                 )
